--- a/netbox.yaml
+++ b/netbox.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: netbox
@@ -6,6 +6,9 @@ metadata:
     app: netbox
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: netbox
   template:
     metadata:
       labels:
@@ -13,7 +16,11 @@ spec:
     spec:
       containers:
       - name: netbox
-        image: ninech/netbox:v2.2.6
+        image: netboxcommunity/netbox:v2.9.8
+        resources:
+          limits:
+            cpu: 100m
+            memory: 100Mi
         ports:
         - containerPort: 8001
         env:
@@ -119,7 +126,7 @@ spec:
           name: nginx-conf
       - name: netbox-static-files
         persistentVolumeClaim:
-          claimName: netbox-static-files
+          claimName: netbox-static-files-pv-claim
 
 ---
 apiVersion: v1
@@ -141,10 +148,11 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: netbox-static-files
+  name: netbox-static-files-pv-claim
   labels:
-    pvcname: netbox-static-files
+    app: netbox
 spec:
+  storageClassName: manual
   accessModes:
   - ReadWriteMany
   resources:
@@ -153,62 +161,17 @@ spec:
 
 ---
 apiVersion: v1
-kind: ConfigMap
+kind: PersistentVolume
 metadata:
-  name: netbox-netbox-env
-data:
-  ALLOWED_HOSTS: '*'
-  DB_HOST: postgres
-  DB_NAME: netbox
-  DB_PASSWORD: J5brHrAXFLQSif0K
-  DB_USER: netbox
-  EMAIL_FROM: netbox@bar.com
-  EMAIL_PASSWORD: bar
-  EMAIL_PORT: "25"
-  EMAIL_SERVER: localhost
-  EMAIL_TIMEOUT: "10"
-  EMAIL_USERNAME: foo
-  NETBOX_PASSWORD: guest
-  NETBOX_USERNAME: guest
-  SECRET_KEY: r8OwDznj!!dci
-  SUPERUSER_API_TOKEN: 0123456789abcdef0123456789abcdef01234567
-  SUPERUSER_EMAIL: admin@example.com
-  SUPERUSER_NAME: admin
-  SUPERUSER_PASSWORD: admin
----
-apiVersion: v1
-kind: ConfigMap
-metadata: 
-  name: nginx-conf
-data:
-  nginx.conf: |
-    worker_processes 1;
-    events {
-      worker_connections  1024;
-    }
-    http {
-      include       /etc/nginx/mime.types;
-      default_type  application/octet-stream;
-      sendfile        on;
-      tcp_nopush     on;
-      keepalive_timeout  65;
-      gzip  on;
-      server_tokens off;
-      server {
-          listen 80;
-          server_name localhost;
-          access_log off;
-          location /static/ {
-            alias /opt/netbox/netbox/static/;
-          }
-          location / {
-            proxy_pass http://netbox:8001;
-            proxy_set_header X-Forwarded-Host $http_host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            add_header P3P 'CP="ALL DSP COR PSAa PSDa OUR NOR ONL UNI COM NAV"';
-          }
-      }
-    }
-
-
+  name: netbox-static-files-pv
+  labels:
+    type: local
+    app: netbox
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 100Mi
+  accessModes:
+    - ReadWriteMany
+  hostPath:
+    path: "/data/k8s/netbox-static-files"
