--- a/config.yaml
+++ b/config.yaml
@@ -2,26 +2,60 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: netbox-netbox-env
+  name: netbox-app-env
 data:
   ALLOWED_HOSTS: '*'
-  DB_HOST: postgres
+  DB_HOST: netbox-postgres
   DB_NAME: netbox
-  DB_PASSWORD: J5brHrAXFLQSif0K
   DB_USER: netbox
+  DB_PASSWORD: J5brHrAXFLQSif0K
   EMAIL_FROM: netbox@bar.com
   EMAIL_PASSWORD: bar
   EMAIL_PORT: "25"
   EMAIL_SERVER: localhost
   EMAIL_TIMEOUT: "10"
   EMAIL_USERNAME: foo
-  NETBOX_PASSWORD: guest
   NETBOX_USERNAME: guest
-  SECRET_KEY: r8OwDznj!!dci
-  SUPERUSER_API_TOKEN: 0123456789abcdef0123456789abcdef01234567
+  SECRET_KEY: "!$9qmU@9qixPE6Qn*mfw94tOolJdkEa#e8F456e17NviB5qlnk"
+  REDIS_HOST: netbox-redis
+  REDIS_CACHE_HOST: netbox-redis
+  REDIS_PORT: "6379"
+  REDIS_CACHE_PORT: "6379"
+  REDIS_DATABASE: "0"
+  REDIS_CACHE_DATABASE: "1"
   SUPERUSER_EMAIL: admin@example.com
   SUPERUSER_NAME: admin
   SUPERUSER_PASSWORD: admin
+  nginx.conf: |
+    worker_processes 1;
+    events {
+      worker_connections  1024;
+    }
+    http {
+      include       /etc/nginx/mime.types;
+      default_type  application/octet-stream;
+      sendfile        on;
+      tcp_nopush     on;
+      keepalive_timeout  65;
+      gzip  on;
+      server_tokens off;
+      server {
+          listen 80;
+          server_name _;
+          access_log off;
+          location /static/ {
+            alias /opt/netbox/netbox/static/;
+          }
+
+          location / {
+            proxy_pass http://127.0.0.1:8001;
+            proxy_set_header X-Forwarded-Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+          }
+      }
+    }
+
 
 ---
 apiVersion: v1
