--- a/netbox.yaml
+++ b/netbox.yaml
@@ -74,6 +74,11 @@ spec:
             configMapKeyRef:
               key: NETBOX_USERNAME
               name: netbox-app-env
+        - name: LOGIN_REQUIRED
+          valueFrom:
+            configMapKeyRef:
+              key: LOGIN_REQUIRED
+              name: netbox-app-env
         - name: REDIS_HOST
           valueFrom:
             configMapKeyRef:
