--- a/templates/config.yaml
+++ b/templates/config.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: netbox-app-env
+  name: {{ .Release.Name }}-app-env
 data:
   ALLOWED_HOSTS: '*'
-  DB_HOST: netbox-postgres
+  DB_HOST: {{ .Release.Name }}-postgres
   DB_NAME: netbox
   DB_USER: netbox
   DB_PASSWORD: J5brHrAXFLQSif0K
@@ -18,8 +18,8 @@ data:
   LOGIN_REQUIRED: "true"
   NETBOX_USERNAME: guest
   SECRET_KEY: "!$9qmU@9qixPE6Qn*mfw94tOolJdkEa#e8F456e17NviB5qlnk"
-  REDIS_HOST: netbox-redis
-  REDIS_CACHE_HOST: netbox-redis
+  REDIS_HOST: {{ .Release.Name }}-redis
+  REDIS_CACHE_HOST: {{ .Release.Name }}-redis
   REDIS_PORT: "6379"
   REDIS_CACHE_PORT: "6379"
   REDIS_DATABASE: "0"
@@ -62,7 +62,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: netbox-postgres-env
+  name: {{ .Release.Name }}-postgres-env
 data:
   POSTGRES_DB: netbox
   POSTGRES_USER: netbox
