--- a/templates/config.yaml
+++ b/templates/config.yaml
@@ -8,7 +8,7 @@ data:
   DB_HOST: {{ .Release.Name }}-postgres
   DB_NAME: netbox
   DB_USER: netbox
-  DB_PASSWORD: J5brHrAXFLQSif0K
+  DB_PASSWORD: {{ .Values.postgres.password }}
   EMAIL_FROM: netbox@bar.com
   EMAIL_PASSWORD: bar
   EMAIL_PORT: "25"
@@ -24,9 +24,9 @@ data:
   REDIS_CACHE_PORT: "6379"
   REDIS_DATABASE: "0"
   REDIS_CACHE_DATABASE: "1"
-  SUPERUSER_EMAIL: admin@example.com
-  SUPERUSER_NAME: admin
-  SUPERUSER_PASSWORD: admin
+  SUPERUSER_EMAIL: {{ .Values.netbox.superuserEmail }}
+  SUPERUSER_NAME: {{ .Values.netbox.superuserName }}
+  SUPERUSER_PASSWORD: {{ .Values.netbox.superuserPassword }}
   nginx.conf: |
     worker_processes 1;
     events {
@@ -66,5 +66,5 @@ metadata:
 data:
   POSTGRES_DB: netbox
   POSTGRES_USER: netbox
-  POSTGRES_PASSWORD: J5brHrAXFLQSif0K
+  POSTGRES_PASSWORD: {{ .Values.postgres.password }}
   
