--- a/templates/config.yaml
+++ b/templates/config.yaml
@@ -18,6 +18,7 @@ data:
   LOGIN_REQUIRED: "true"
   NETBOX_USERNAME: guest
   SECRET_KEY: {{ .Values.netbox.secretKey }}
+  BASE_PATH: {{ .Values.netbox.basePath }}
   REDIS_HOST: {{ .Release.Name }}-redis
   REDIS_CACHE_HOST: {{ .Release.Name }}-redis
   REDIS_PORT: "6379"
@@ -44,7 +45,7 @@ data:
           listen 80;
           server_name _;
           access_log off;
-          location /static/ {
+          location /{{ .Values.netbox.basePath }}static/ {
             alias /opt/netbox/netbox/static/;
           }
 
