--- a/templates/redis.yaml
+++ b/templates/redis.yaml
@@ -54,30 +54,9 @@ kind: PersistentVolumeClaim
 metadata:
   name: {{ .Release.Name }}-redis-pv-claim
 spec:
-  storageClassName: manual
+  storageClassName: {{ .Values.redis.storageClass }}
   accessModes:
     - ReadWriteOnce
-  selector:
-    matchLabels:
-      app: {{ .Release.Name }}-redis
   resources:
     requests:
       storage: 1Gi
-
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: {{ .Release.Name }}-redis-pv
-  labels:
-    type: local
-    app: {{ .Release.Name }}-redis
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 1Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: {{ .Values.redis.dataPath }}
-
