--- a/templates/netbox.yaml
+++ b/templates/netbox.yaml
@@ -186,6 +186,7 @@ spec:
   type: LoadBalancer
   ports:
   - name: netbox
-    port: 80
+    port: 8080
+    targetPort: 80
   selector:
     app: {{ .Release.Name }}-app
