--- a/templates/netbox.yaml
+++ b/templates/netbox.yaml
@@ -177,10 +177,28 @@ metadata:
   labels:
     app: {{ .Release.Name }}-app
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - name: netbox
-    port: 8080
-    targetPort: 80
+    port: 80
   selector:
     app: {{ .Release.Name }}-app
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: {{ .Release.Name }}-ingress
+  labels:
+    app: {{ .Release.Name }}-ingress
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /netbox
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Release.Name }}-app
+            port:
+              number: 80
